# iron-throne

./: Cargo.toml  README.md  diesel.toml  docker-compose.yml  notes.txt
macros/: Cargo.toml
macros/src/: lib.rs
module/core/: active_record.rs
modules/: data.rs  lib.rs  utils.rs
modules/database/: connection.rs
modules/db/: connection.rs  dao.rs  dao1.rs
modules/validation/: Cargo.toml
modules/validation/src/: lib.rs
src/: active_record.rs  database.rs  erro.rs  lib.rs  main.rs  prelude.rs  schema.rs
test/: main.rs  test.rs
test/modules/: database.rs
test/modules/db/: connection.rs  dao.rs  test_db.rs
test/subpart/: reflection.rs
util/: Cargo.toml
util/src/: lib.rs
