[package]
name = "iron-throne"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "test"
path = "test/test.rs" # Mova para o padrão Rust, se for um binário legítimo

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
diesel = { version = "2.2.0", features = ["postgres"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls"]}
thiserror = "1.0"
lazy_static = "1.4"
serde_json = "1.0.133"
validator = "0.16"
validator_derive = "0.16"
dotenvy = "0.15"

[lib]
proc-macro = true